[gd_scene load_steps=6 format=3 uid="uid://dcxpd60c1fghu"]

[ext_resource type="Script" path="res://scenes/OptionsMenu.gd" id="1_crkg2"]
[ext_resource type="Texture2D" uid="uid://b4qqu1vmksmwa" path="res://assets/backgrounds/Stone.png" id="1_pnln7"]
[ext_resource type="FontFile" uid="uid://dyr4xh66jxnhy" path="res://assets/fonts/8-bit-hud.ttf" id="3_prw4d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mrtga"]
resource_name = "Stone"
texture = ExtResource("1_pnln7")
margins = Vector2i(1, 0)
separation = Vector2i(1, 0)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0

[sub_resource type="TileSet" id="TileSet_gn8ab"]
sources/0 = SubResource("TileSetAtlasSource_mrtga")

[node name="OptionsMenu" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -78.0
offset_right = 120.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crkg2")

[node name="BackgroundMenu" type="TileMap" parent="."]
show_behind_parent = true
clip_children = 2
texture_filter = 1
position = Vector2(659, 120)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_gn8ab")
format = 2
layer_0/tile_data = PackedInt32Array(-262166, 65536, 0, -196630, 65536, 1, -131094, 65536, 2, -65558, 65536, 3, -22, 65536, 4, 65514, 65536, 5, 131050, 65536, 6, -262165, 131072, 0, -196629, 131072, 1, -131093, 131072, 2, -65557, 131072, 3, -21, 131072, 4, 65515, 131072, 5, 131051, 131072, 6, -262164, 196608, 0, -196628, 196608, 1, -131092, 196608, 2, -65556, 196608, 3, -20, 196608, 4, 65516, 196608, 5, 131052, 196608, 6, -262163, 262144, 0, -196627, 262144, 1, -131091, 262144, 2, -65555, 262144, 3, -19, 262144, 4, 65517, 262144, 5, 131053, 262144, 6, -262162, 0, 0, -196626, 0, 1, -131090, 0, 2, -65554, 0, 3, -18, 0, 4, 65518, 0, 5, 131054, 0, 6, -262161, 65536, 0, -196625, 65536, 1, -131089, 65536, 2, -65553, 65536, 3, -17, 65536, 4, 65519, 65536, 5, 131055, 65536, 6, -262160, 131072, 0, -196624, 131072, 1, -131088, 131072, 2, -65552, 131072, 3, -16, 131072, 4, 65520, 131072, 5, 131056, 131072, 6, -262159, 196608, 0, -196623, 196608, 1, -131087, 196608, 2, -65551, 196608, 3, -15, 196608, 4, 65521, 196608, 5, 131057, 196608, 6, -262158, 262144, 0, -196622, 262144, 1, -131086, 262144, 2, -65550, 262144, 3, -14, 262144, 4, 65522, 262144, 5, 131058, 262144, 6, -262157, 0, 0, -196621, 0, 1, -131085, 0, 2, -65549, 0, 3, -13, 0, 4, 65523, 0, 5, 131059, 0, 6, -262167, 0, 0, -196631, 0, 1, -131095, 0, 2, -65559, 0, 3, -23, 0, 4, 65513, 0, 5, 131049, 0, 6, -262156, 65536, 0, -196620, 65536, 1, -131084, 65536, 2, -65548, 65536, 3, -12, 65536, 4, 65524, 65536, 5, 131060, 65536, 6)

[node name="Label" type="Label" parent="."]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_prw4d")
theme_override_font_sizes/font_size = 12
text = "Options"
horizontal_alignment = 1

[node name="Container" type="Control" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SupBar" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="SupBar"]
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_direction = 2
layout_mode = 2

[node name="Label" type="Label" parent="SupBar/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_prw4d")
theme_override_font_sizes/font_size = 10
text = "Volumen"

[node name="Volumen" type="HSlider" parent="SupBar/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="Musica" type="CheckButton" parent="SupBar"]
unique_name_in_owner = true
texture_filter = 5
layout_mode = 2
theme_override_fonts/font = ExtResource("3_prw4d")
theme_override_font_sizes/font_size = 10
button_pressed = true
text = "Music
"

[node name="HowToPlayButton" type="Button" parent="SupBar"]
unique_name_in_owner = true
texture_filter = 3
texture_repeat = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_prw4d")
theme_override_font_sizes/font_size = 12
text = "How to Play"

[node name="BackOptions" type="Button" parent="SupBar"]
unique_name_in_owner = true
texture_filter = 3
texture_repeat = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_prw4d")
theme_override_font_sizes/font_size = 12
text = "Back"

[connection signal="value_changed" from="SupBar/HBoxContainer/Volumen" to="." method="_on_volumen_value_changed"]
[connection signal="toggled" from="SupBar/Musica" to="." method="_on_musica_toggled"]
